scss folder structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 
 <body>
     <!-- Header start -->
-    <header class="header"></header>
+    <header class="header">
+        <div class="topBar">
+            <div class="topBarLeft">
+                <ul class="contactList">
+                    <li class="contactItem"><a href="tel:+38 068 005 3570">+38 068 005 3570</a></li>
+                    <li class="contactItem"><a href="mailto:fastsales@gmail.com">fastsales@gmail.com</a></li>
+                </ul>
+            </div>
+            <div class="topBarRight">
+                <div class="topBarMenu"></div>
+                <div class="topBarUser"></div>
+            </div>
+        </div>
+    </header>
     <!-- Header end -->
 
     <main class="main"></main>
